syntax = "proto3";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "proto/learning_module.proto";

package edu.cmu.cs.delphi.api;

service AdminService {
  rpc Reset (ResetRequest) returns (google.protobuf.Empty);
  rpc GetLastTrainedVersion (SearchId) returns (google.protobuf.Int32Value);
}

message ResetRequest {
  SearchId searchId = 1;
  bool trainOnly = 2;
}
